projects/cert-man/all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: cert-manager
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - {}
